--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "vanilla-latte-ts",
   "version": "1.1.0",
   "description": "A simple unit testing module for TypeScript.",
-  "main": "dist/Main.js",
-  "types": "dist/Main.d.ts",
+  "main": "dist/Vanilla.js",
+  "types": "dist/Vanilla.d.ts",
   "scripts": {
     "build": "tsc"
   },
